<resources>
    <string name="app_name">IdentiFace</string>
    <string name="sketch_board">Sketch Board</string>
    <string name="history">History</string>
    <string name="detail">Personal Detail</string>
    <string name="scanning">Scanning</string>
    <string name="result">Result</string>
    <string name="action_new">New</string>
    <string name="action_open">Open</string>
    <string name="action_save">Save</string>
    <string name="action_history">History</string>
    <string name="action_all_dataset">All dataset</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>

    <string name="algorithm">Algorithm</string>
    <string name="u_surf">U-SURF</string>
    <string name="string_grammar">String grammar</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="unknown">Unknown</string>
    <string name="around">Around</string>

    <array name="res_hair_styles">
        <item>@mipmap/hide</item>
        <item>@mipmap/hair487</item>
        <item>@mipmap/hair488</item>
        <item>@mipmap/hair489</item>
        <item>@mipmap/hair490</item>
        <item>@mipmap/hair491</item>
        <item>@mipmap/hair492</item>
        <item>@mipmap/hair493</item>
        <item>@mipmap/hair500</item>
        <item>@mipmap/hair501</item>
        <item>@mipmap/hair504</item>
        <item>@mipmap/hair505</item>
        <item>@mipmap/hair507</item>
        <item>@mipmap/hair508</item>
        <item>@mipmap/hair510</item>
        <item>@mipmap/hair512</item>
        <item>@mipmap/hair513</item>
        <item>@mipmap/hair514</item>
        <item>@mipmap/hair515</item>
        <item>@mipmap/hair518</item>
        <item>@mipmap/hair522</item>
        <item>@mipmap/hair525</item>
        <item>@mipmap/hair528</item>
        <item>@mipmap/hair530</item>
        <item>@mipmap/hair532</item>
        <item>@mipmap/hair536</item>
        <item>@mipmap/hair545</item>
        <item>@mipmap/hair548</item>
        <item>@mipmap/hair553</item>
        <item>@mipmap/hair554</item>
        <item>@mipmap/hair555</item>
        <item>@mipmap/hair557</item>
        <item>@mipmap/hair_yuth</item>
    </array>

    <array name="res_jaw_styles">
        <item>@mipmap/hide</item>
        <item>@mipmap/jaw487</item>
        <item>@mipmap/jaw488</item>
        <item>@mipmap/jaw489</item>
        <item>@mipmap/jaw490</item>
        <item>@mipmap/jaw491</item>
        <item>@mipmap/jaw492</item>
        <item>@mipmap/jaw493</item>
        <item>@mipmap/jaw500</item>
        <item>@mipmap/jaw501</item>
        <item>@mipmap/jaw504</item>
        <item>@mipmap/jaw505</item>
        <item>@mipmap/jaw507</item>
        <item>@mipmap/jaw508</item>
        <item>@mipmap/jaw510</item>
        <item>@mipmap/jaw512</item>
        <item>@mipmap/jaw513</item>
        <item>@mipmap/jaw514</item>
        <item>@mipmap/jaw515</item>
        <item>@mipmap/jaw518</item>
        <item>@mipmap/jaw522</item>
        <item>@mipmap/jaw525</item>
        <item>@mipmap/jaw528</item>
        <item>@mipmap/jaw530</item>
        <item>@mipmap/jaw532</item>
        <item>@mipmap/jaw536</item>
        <item>@mipmap/jaw545</item>
        <item>@mipmap/jaw548</item>
        <item>@mipmap/jaw553</item>
        <item>@mipmap/jaw554</item>
        <item>@mipmap/jaw555</item>
        <item>@mipmap/jaw557</item>
        <item>@mipmap/jaw_yuth</item>
    </array>

    <array name="res_eyebrows_styles">
        <item>@mipmap/hide</item>
        <item>@mipmap/eyebrows487</item>
        <item>@mipmap/eyebrows488</item>
        <item>@mipmap/eyebrows489</item>
        <item>@mipmap/eyebrows490</item>
        <item>@mipmap/eyebrows491</item>
        <item>@mipmap/eyebrows492</item>
        <item>@mipmap/eyebrows493</item>
        <item>@mipmap/eyebrows500</item>
        <item>@mipmap/eyebrows501</item>
        <item>@mipmap/eyebrows504</item>
        <item>@mipmap/eyebrows505</item>
        <item>@mipmap/eyebrows507</item>
        <item>@mipmap/eyebrows508</item>
        <item>@mipmap/eyebrows510</item>
        <item>@mipmap/eyebrows512</item>
        <item>@mipmap/eyebrows513</item>
        <item>@mipmap/eyebrows514</item>
        <item>@mipmap/eyebrows515</item>
        <item>@mipmap/eyebrows518</item>
        <item>@mipmap/eyebrows522</item>
        <item>@mipmap/eyebrows525</item>
        <item>@mipmap/eyebrows528</item>
        <item>@mipmap/eyebrows530</item>
        <item>@mipmap/eyebrows532</item>
        <item>@mipmap/eyebrows536</item>
        <item>@mipmap/eyebrows545</item>
        <item>@mipmap/eyebrows548</item>
        <item>@mipmap/eyebrows553</item>
        <item>@mipmap/eyebrows554</item>
        <item>@mipmap/eyebrows555</item>
        <item>@mipmap/eyebrows557</item>
        <item>@mipmap/eyebrows_yuth</item>
    </array>

    <array name="res_eyes_styles">
        <item>@mipmap/hide</item>
        <item>@mipmap/eyes487</item>
        <item>@mipmap/eyes488</item>
        <item>@mipmap/eyes489</item>
        <item>@mipmap/eyes490</item>
        <item>@mipmap/eyes491</item>
        <item>@mipmap/eyes492</item>
        <item>@mipmap/eyes493</item>
        <item>@mipmap/eyes500</item>
        <item>@mipmap/eyes501</item>
        <item>@mipmap/eyes504</item>
        <item>@mipmap/eyes505</item>
        <item>@mipmap/eyes507</item>
        <item>@mipmap/eyes508</item>
        <item>@mipmap/eyes510</item>
        <item>@mipmap/eyes512</item>
        <item>@mipmap/eyes513</item>
        <item>@mipmap/eyes514</item>
        <item>@mipmap/eyes515</item>
        <item>@mipmap/eyes518</item>
        <item>@mipmap/eyes522</item>
        <item>@mipmap/eyes525</item>
        <item>@mipmap/eyes528</item>
        <item>@mipmap/eyes530</item>
        <item>@mipmap/eyes532</item>
        <item>@mipmap/eyes536</item>
        <item>@mipmap/eyes545</item>
        <item>@mipmap/eyes548</item>
        <item>@mipmap/eyes553</item>
        <item>@mipmap/eyes554</item>
        <item>@mipmap/eyes555</item>
        <item>@mipmap/eyes557</item>
        <item>@mipmap/eyes_yuth</item>
    </array>

    <array name="res_nose_styles">
        <item>@mipmap/hide</item>
        <item>@mipmap/nose487</item>
        <item>@mipmap/nose488</item>
        <item>@mipmap/nose489</item>
        <item>@mipmap/nose490</item>
        <item>@mipmap/nose491</item>
        <item>@mipmap/nose492</item>
        <item>@mipmap/nose493</item>
        <item>@mipmap/nose500</item>
        <item>@mipmap/nose501</item>
        <item>@mipmap/nose504</item>
        <item>@mipmap/nose505</item>
        <item>@mipmap/nose507</item>
        <item>@mipmap/nose508</item>
        <item>@mipmap/nose510</item>
        <item>@mipmap/nose512</item>
        <item>@mipmap/nose513</item>
        <item>@mipmap/nose514</item>
        <item>@mipmap/nose515</item>
        <item>@mipmap/nose518</item>
        <item>@mipmap/nose522</item>
        <item>@mipmap/nose525</item>
        <item>@mipmap/nose528</item>
        <item>@mipmap/nose530</item>
        <item>@mipmap/nose532</item>
        <item>@mipmap/nose536</item>
        <item>@mipmap/nose545</item>
        <item>@mipmap/nose548</item>
        <item>@mipmap/nose553</item>
        <item>@mipmap/nose554</item>
        <item>@mipmap/nose555</item>
        <item>@mipmap/nose557</item>
        <item>@mipmap/nose_yuth</item>
    </array>

    <array name="res_mouth_styles">
        <item>@mipmap/hide</item>
        <item>@mipmap/mouth487</item>
        <item>@mipmap/mouth488</item>
        <item>@mipmap/mouth489</item>
        <item>@mipmap/mouth490</item>
        <item>@mipmap/mouth491</item>
        <item>@mipmap/mouth492</item>
        <item>@mipmap/mouth493</item>
        <item>@mipmap/mouth500</item>
        <item>@mipmap/mouth501</item>
        <item>@mipmap/mouth504</item>
        <item>@mipmap/mouth505</item>
        <item>@mipmap/mouth507</item>
        <item>@mipmap/mouth508</item>
        <item>@mipmap/mouth510</item>
        <item>@mipmap/mouth512</item>
        <item>@mipmap/mouth513</item>
        <item>@mipmap/mouth514</item>
        <item>@mipmap/mouth515</item>
        <item>@mipmap/mouth518</item>
        <item>@mipmap/mouth522</item>
        <item>@mipmap/mouth525</item>
        <item>@mipmap/mouth528</item>
        <item>@mipmap/mouth530</item>
        <item>@mipmap/mouth532</item>
        <item>@mipmap/mouth536</item>
        <item>@mipmap/mouth545</item>
        <item>@mipmap/mouth548</item>
        <item>@mipmap/mouth553</item>
        <item>@mipmap/mouth554</item>
        <item>@mipmap/mouth555</item>
        <item>@mipmap/mouth557</item>
        <item>@mipmap/mouth_yuth</item>
    </array>

</resources>
